<resources>
    <string name="app_name">Ohms Law Calculator</string>
    <string name="resistance_label">RESISTANCE</string>
    <string name="resistance_hint">Enter Resistance in Ohms</string>
    <string name="voltage_label">VOLTAGE</string>
    <string name="voltage_hint">Enter Voltage in Volts</string>

    <!-- CREATED TWO STRINGS, ONE FOR THE CURRENT TEXTBOX LABEL AND -->
    <!-- A SECOND FOR THE CALCULATE CURRENT HINT -->
    <string name="current_label">CURRENT</string>
    <string name="current_hint">Enter Current in Amps</string>


    <!-- CREATED TWO STRINGS, ONE FOR THE TEXT OF THE CALCULATE VOLTAGE BUTTON -->
    <!-- AND THE OTHER FOR THE TEXT OF THE CALCULATE CURRENT BUTTON -->
    <string name="calculateR_button">Calculate Resistance</string>

    <string name="calculateV_button">Calculate Voltage</string>
    <string name="calculateA_button">Calculate Current</string>
</resources>
